# ledstickler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  array.h  artnet.cpp  artnet.h  bounds.h  build_linux.sh  build_linux_armv8.sh  build_msvc.bat  build_osx.sh  build_win.bat  color.h  conan_linux.profile  conan_msys2_mingw.profile  conan_osx.profile  conanfile.txt  datagram.cpp  datagram.h  fixture.h  float4.h  gradient.h  main.cpp  matrix4x4.h  timeline.cpp  timeline.h  vec4.h
